prometheus-op/kube-controller-manager-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  labels:
    k8s-app: kube-controller-manager
  name: kube-controller-manager
  namespace: kube-system
subsets:
- addresses:
  - ip: 192.168.2.10
    targetRef:
      kind: Node
      name: 192.168.2.10
  ports:
  - name: http-metrics
    port: 10252
    protocol: TCP
